<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoutesScreen">
    <LinearLayout
        android:id="@+id/headerLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/routes_title">

        <TextView
            android:id="@+id/nameHeader"
            android:text="Route Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/startPointHeader"
            android:text="Starting Point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/stepCountHeader"
            android:text="Step Count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/distanceHeader"
            android:text="Distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/timeCount"
            android:text="Time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/buttonHeader"
            android:text="View Details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/favoriteHeader"
            android:text="Favorite?"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
    <Button
        android:id="@+id/home_but_routes"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/routes_but_routes" />

    <Button
        android:id="@+id/routes_but_routes"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Routes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/home_but_routes"
        app:layout_constraintRight_toLeftOf="@id/test_but_routes"/>

    <Button
        android:id="@+id/test_but_routes"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Testing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/routes_but_routes"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/routes_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="Routes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRoutes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/addNewWalk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

    <Button
        android:id="@+id/addNewWalk"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/routes_but_routes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>