<resources>
    <string name="app_name">walk-walk-revolution</string>
    <string name="home_but_routes">Home</string>
    <string name="routes_but_routes">Routes</string>
    <string name="textName">Name: *</string>
    <string name="txtName"> </string>
    <string name="textStartPoint">Starting Point:</string>
    <string name="txtStartPoint"> </string>
    <string name="textFeature">Features:</string>
    <string name="groupLoop"> </string>
...
